# faststylometry

./: .gitignore  Burrows Delta Walkthrough.ipynb  CITATION.cff  LICENSE  MANIFEST.in  README.md  README.rst  example_fast_stylometry_single_string.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini  update_version.py
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: release.yml  test.yml
data/test/: currerbell_-_villette.txt
data/train/: dickens_-_a_christmas_carol.txt  dickens_-_bleak_house.txt  dickens_-_david_copperfield.txt  dickens_-_great_expectations.txt  dickens_-_oliver_twist.txt
faststylometry/: __init__.py  burrows_delta.py  corpus.py  en.py  probability.py  util.py
faststylometry/data/test/: janedoe_-_sense_and_sensibility.txt
faststylometry/data/train/: austen_-_northanger_abbey.txt  austen_-_persuasion.txt  bronte_-_jane_eyre.txt  bronte_-_shirley.txt  conan_doyle_-_adventures_of_sherlock_holmes.txt  swift_-_a_modest_proposal.txt
src/faststylometry/: __init__.py  burrows_delta.py  corpus.py  en.py  examples.py  probability.py  util.py
tests/: __init__.py  test_download_probability_and_calibration.py  test_drugs_finder.py
